--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Zaku
-logo: assets/images/profile_pic.png
+logo: assets/images/profile_pic.PNG
 # descriptiopn: xxx
 show_downloads: True
 remote_theme: pages-themes/minimal@v0.2.0
