--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Zaku
 logo: assets/images/profile_pic.PNG
 # descriptiopn: xxx
 show_downloads: True
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme
+- jekyll-remote-theme 
